# OmniFusion

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  opencode.example.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: .dockerignore  Dockerfile  docker-compose.yml
docs/: OPENFUSION_NOTICE.md  advertised-claims.md  api-compatibility.md  benchmark-reproduction.md  budgeting-tracing.md  client-contract-matrix.json  compatibility-matrix.md  fugu-architecture.md  providers-presets.md  quickstart.md  security-model.md
evals/coding/: README.md  aider_config.json  external_suites.json  full_tasks.json  smoke_tasks.json  tool_tasks.json
evals/coding/ablations/: README.md  ablation_template.json
evals/coding/baselines/: README.md  baseline_table.md  baseline_template.json
scripts/: verify_claims.py
scripts/compat/: openai_node.mjs  openai_python.py
src/omnifusion/: OPENFUSION_NOTICE.md  cli.py  logging_config.py  main.py  openfusion_cli.py  settings.py
src/omnifusion/admin/: budget_view.py  csrf.py  diagnostics.py  jobs.py  routes.py
src/omnifusion/api/: auth.py  chat.py  errors.py  model_names.py  models.py  normalize.py  openfusion.py  presets.py  providers.py  responses.py  schemas.py  sse.py  traces.py
src/omnifusion/budget/: ledger.py
src/omnifusion/evals/: __init__.py  ablations.py  coding.py  tools.py
src/omnifusion/fusion/: judge.py  openfusion_runtime.py  openfusion_templates.py  orchestrator.py  panel.py  plugins.py  prompts.py  synth.py  tool_orchestrator.py  types.py  web_grounding.py
src/omnifusion/fusion/prompts/: final_b.j2  judge_b.j2
src/omnifusion/fusion/runtime/: __init__.py  artifacts.py  bandit.py  context.py  executor.py  registry.py  response.py  strategy.py  streaming.py
src/omnifusion/fusion/strategies/: __init__.py  classic.py  conductor.py  tool_step.py
src/omnifusion/llm/: client.py
src/omnifusion/providers/: capabilities.py  pricing.py  validation.py
src/omnifusion/ratelimit/: circuit_breaker.py  limiter.py
src/omnifusion/secrets/: crypto.py  redact.py
src/omnifusion/store/: db.py  presets.py  providers.py  runs.py
src/omnifusion/tools/: __init__.py  search.py  web.py
src/omnifusion/web/templates/: base.html  budget.html  dashboard.html  diagnostics.html  login.html  playground.html  presets.html  providers.html  runs.html  trace_detail.html
tests/: conftest.py  test_admin_budget.py  test_admin_diagnostics.py  test_advertised_claims.py  test_budget.py  test_capabilities.py  test_client_openai_python.py  test_contract.py  test_crypto.py  test_gap_fixes_batch_a.py  test_gap_fixes_batch_b.py  test_gap_fixes_batch_e.py  test_gap_fixes_batch_f.py  test_gap_fixes_batch_h.py  test_integration.py  test_judge_parsing.py  test_m1a.py  test_m1b.py  test_m1b_tool_microbench.py  test_m1c.py  test_m2_aliases.py  test_m2_client_matrix.py  test_m2_errors.py  test_m2_normalize.py  test_m2_responses.py  test_m2_routes_models.py  test_m3a_executor.py  test_m3b_canonical_sse.py  test_m3b_streaming_response.py  test_m3c_real_strategy_parity.py  test_m3c_strategy_registry.py  test_m4_preset_crud.py  test_m4_preset_v2.py  test_m5_judge_parity.py  test_m5_openrouter_parity.py  test_m5_plugins_search.py  test_m5_web_fetch.py  test_m5_web_grounding.py  test_m6_ablations.py  test_m6_conductor.py  (+19 more)
tests/fixtures/replay/: streaming_synthesis_cost.json
tests/fixtures/sse/: classic_stream.sse
web/templates/: dashboard.html
