[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnifusion"
version = "0.1.0"
description = "Self-hostable OpenAI-compatible council-of-models inference endpoint"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = [
    "llm",
    "openai-compatible",
    "model-routing",
    "model-fusion",
    "self-hosted",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "argon2-cffi>=25.1.0",
    "cryptography>=49.0.0",
    "fastapi>=0.137.1",
    "jinja2>=3.1.6",
    "litellm>=1.89.1",
    "nh3>=0.3.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
# Server-side web_fetch of PDFs ('pdf-text' MIME support). Optional so the base
# install stays lean; fetching a PDF without it fails with a clear message.
pdf = ["pypdf>=4.0.0"]

[project.scripts]
omnifusion = "omnifusion.cli:main"

[project.urls]
Homepage = "https://github.com/MaxiZm/OmniFusion"
Repository = "https://github.com/MaxiZm/OmniFusion"
Issues = "https://github.com/MaxiZm/OmniFusion/issues"
Documentation = "https://github.com/MaxiZm/OmniFusion#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omnifusion = [
    "web/templates/*.html",
    "fusion/prompts/*.j2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "openai>=2.42.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: integration tests"
]
filterwarnings = [
    "ignore:.*Using `httpx` with `starlette.testclient` is deprecated.*:DeprecationWarning",
    "ignore::DeprecationWarning:fastapi.*",
    "ignore::DeprecationWarning:starlette.*"
]
